# Data-Governance-with-Purview-Fabric-and-Databricks

./: .gitignore  README.md  azure.yaml  pyproject.toml
assets/: market_data_subscriptions.json
assets/sample_sintetic_data/: agencias.csv  cartoes.csv  chaves_pix.csv  clientes.csv  contas.csv  movimentacao_boleto_pago.csv  movimentacao_deposito_recebido.csv  movimentacao_pagamento_cartao.csv  movimentacao_pix_realizado.csv  movimentacao_pix_recebido.csv  movimentacao_transferencia_realizada.csv  movimentacao_transferencia_recebida.csv  transacoes.csv
docs/: DataProducts.md  MedallionRequirements.md  README-PTBR.md  guia-implementacao-ptbr.md  postgres-azure-ad-admins.md  postgres-changes-summary.md
env_files/: .env.sample
infra/: README.md
infra/bicep/: main.bicep  main.json  main.parameters.example.json  main.parameters.json  main.sample.bicepparam
infra/terraform/: main.tf  outputs.tf  variables.tf
notebooks/: 00_quick_start.md  01_setup_database_and_tables.ipynb  02_insert_main_data.ipynb  03_insert_movement_data.ipynb  04_realtime_transaction_processor.ipynb  05_analytics_simple.ipynb  06_analytics_intermediate.ipynb  07_analytics_complex.ipynb  08_add_client_account_pix.ipynb  09_secrets_and_eventhub_demo.ipynb  bronze_ingestion.ipynb  gold_scd2_loader.ipynb  silver_transformations.ipynb
sql_queries/mirroring_database/: agency_performance.sql  cohort_segmentation_analysis.sql  customer_profile_by_transaction.sql  general_summary.sql  month_distribution_month.sql  pix_cards_relationships.sql  pix_keys_statistics.sql  ranking_temporal_analysis.sql  (+2 more)
(+31 files in other folders)
