[project]
name = "data-governance-with-purview-fabric-and-databricks"
version = "0.1.0"
description = "Criação de dados sinteticos no Postgre SQL para uso na arquitetura medalhão do Databricks e uso de um dashboard no PowerBI e Data Agent no Fabric" 
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.5.3",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.43",
]
[project.optional-dependencies]
secrets = ["azure-identity>=1.16.0","azure-keyvault-secrets>=4.8.0","python-dotenv>=1.0.0"]